--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
 
             <div class="nav-text-box">
-              <span class="p1">Jizzax politexnika instituti rektori</span>
+              <span class="p1">Jizzax Politexnika Instituti Rektori</span>
               <span class="p2">USMANQULOV ALISHER QODIRQULOVICHNING</span>
               <span class="p3">Virtual qabulxonasi</span>
             </div>
@@ -138,7 +138,47 @@
       </div>
     </section>
     
+    <section>
+      <div class="container-fluid cont-footer">
+          <div class="container ">
+              <footer>
+                  <div class="row footer-row">
+                      <div class="col footer-col">
+                          <img class="jizpi-logo" src="./img/jizpi-logo.png" alt="">
+                          <p>
+                              <span>Jizax</span><br>
+                              <span>Politexnika</span><br>
+                              <span>Instituti</span>
+                          </p>
+                      </div>
+                      <div class="col footer-col">
+                        <div class="info">
+                          <span class="title-info">biz bilan bog'lanish</span>
+                          <div class="line"></div>
+                          <span class="title-span">info@jizpi.uz</span><br>
+                          <a class="link" href="#"><img class="img-icon" src="./img/phone-call.png" alt=""><span>+998 72 226 46 05</span></a><br>
+                          <a class="link" href="#"><img class="img-icon" src="./img/marker.png" alt=""><span>Jizzax Islom Karimov Shoh ko‘chasi 4 uy</span></a>
+                        </div>
+                      </div>
+                      <div class="col footer-col">
+                          <div class="info">
+                              <span class="title-info">Bizni ijtimoiy tarmoqlarda kuzating!</span>
+                              <div class="line"></div>
+                              <div class="icon-box">
+                                  <a class="link-icon" href="#"><img class="img-icon-2" src="./img/twitter.png" alt=""></a>
+                                  <a class="link-icon" href="#"><img class="img-icon-2" src="./img/facebook.png" alt=""></a>
+                                  <a class="link-icon" href="#"><img class="img-icon-2" src="./img/telegram.png" alt=""></a>
+                                  <a class="link-icon" href="#"><img class="img-icon-2" src="./img/instagram.png" alt=""></a>
+                              </div>
 
+                          </div>
+                      </div>
+                  </div>
+              </footer>
+          </div>
+          
+      </div>
+    </section>
 
 
 
