rektor.jizpi.uz

--- a/index.html
+++ b/index.html
@@ -138,6 +138,10 @@
       </div>
     </section>
     
+
+    <!-- Footer -->
+  
+
     <section>
       <div class="container-fluid cont-footer">
           <div class="container ">
@@ -180,6 +184,7 @@
       </div>
     </section>
 
+    <!-- Footer end -->
 
 
 
