--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
           <div class="container ">
               <footer>
                   <div class="row footer-row">
-                      <div class="col footer-col">
+                      <div class="col-md-6 col-lg-4 col footer-col">
                           <img class="jizpi-logo" src="./img/jizpi-logo.png" alt="">
                           <p>
                               <span>Jizax</span><br>
@@ -155,7 +155,7 @@
                               <span>Instituti</span>
                           </p>
                       </div>
-                      <div class="col footer-col">
+                      <div class="col-md-6 col-lg-4 col footer-col">
                         <div class="info">
                           <span class="title-info">biz bilan bog'lanish</span>
                           <div class="line"></div>
@@ -164,7 +164,7 @@
                           <a class="link" href="#"><img class="img-icon" src="./img/marker.png" alt=""><span>Jizzax Islom Karimov Shoh ko‘chasi 4 uy</span></a>
                         </div>
                       </div>
-                      <div class="col footer-col">
+                      <div class="col-md-12 col-lg-4 col footer-col">
                           <div class="info">
                               <span class="title-info">Bizni ijtimoiy tarmoqlarda kuzating!</span>
                               <div class="line"></div>
